<resources>
    <string name="app_name">MoneyIsLife</string>
    <string name="add">Добавить</string>
    <string name="main_title">Учет бюджета</string>
    <string name="incomes">Доходы</string>
    <string name="expenses">Расходы</string>
    <string name="balance">Баланс</string>
    <string name="name_add">Наименование</string>
    <string name="sign_in_google_t">Войти через <b>Google+</b></string>
    <string-array name="title_items">
        <item>"Доходы"</item>
        <item>"Расходы"</item>
        <item>"Баланс"</item>
    </string-array>
    <string name="rub">%1$d \u20bd</string>
    <string name="price">Цена</string>
    <string name="delete">Удалить</string>
    <string name="you_sure">Вы уверены?</string>

</resources>
