<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/dark_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddAct"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/light_back"
            android:elevation="4dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/nameS"
                android:hint="@string/name_add"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/numS"
                android:inputType="number"
                android:hint="@string/price"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/add"
            android:background="@color/sec_yellow"
            android:layout_marginTop="52dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>