<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/dark_back">
    <TextView
            android:textColor="@color/light_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/balance"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="0"
            android:textColor="@color/white"
            android:textSize="52sp"/>

    <Kazuki.moneyislife.DiagramView
            android:id="@+id/diagram"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incomes"
                    android:textColor="@color/light_gray"/>
            <TextView
                    android:id="@+id/income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0"
                    android:textColor="@color/sec_yellow"
                    android:textSize="36sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textColor="@color/light_gray"/>
            <TextView
                    android:id="@+id/expenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0"
                    android:textColor="@color/red"
                    android:textSize="36sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>